--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
   "buildCommand": "pnpm run build",
   "installCommand": "pnpm install",
-  "rewrites": [
+  "outputDirectory": "dist/client",
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/api/index"
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/index"
     }
   ]
 }
